fix greeting to now be visible in header

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,3 +1,5 @@
+
+
 .BargainBazaar {
   position: relative;
   padding: 100px; 
@@ -13,8 +15,11 @@
   top: 0;
   right: 0; 
   padding: 10px 20px; 
-  color: rgb(228, 58, 6);
+  color: rgb(92, 92, 92);
+  z-index: 2; 
+  font-family: "Space Grotesk", sans-serif;
 }
+// unable to see in header
 
 .logo-container {
   position: absolute;
